# kinfit-cmd3-docker

./: .gitignore  Dockerfile  docker-compose.yml  download_data.ipynb  install.sh
notebooks/4pi/: TrPh.C  TrPh.h  kinfit4pi.ipynb
notebooks/4pi_kskpi/: TrPh.C  TrPh.h  kinfit4pi.ipynb
notebooks/5pi/: TrPh.C  TrPh.h  kinfit5pi.ipynb  notebook_omegapipi.ipynb
notebooks/5pi_4pi_lostpi0/: TrPh.C  TrPh.h  kinfit5pi.ipynb
notebooks/5pi_eta_lostpi0/: Hypo4ChPionsLostPi0_EtaMass.cpp  Hypo4ChPionsLostPi0_EtaMass.hpp  TrPh.C  TrPh.h  kinfit5pi.ipynb
notebooks/5pi_eta_lostpi0_vertex_fit/: TrPh.C  kinfit5pi.ipynb
notebooks/5pi_lostpi0/: kinfit5pi.ipynb
notebooks/KsKl/: TrPh.C  TrPh.h  kskl.ipynb
notebooks/KsKlpi0/: TrPh.C  TrPh.h  ksklpi0.ipynb
notebooks/KsKpi/: TrPh.C  TrPh.h  kskpi.ipynb  notebook_kskpi.ipynb  plots_kskpi.ipynb
notebooks/KsKpi_4pi/: TrPh.C  kskpi_4pi.ipynb
notebooks/KsKpi_cmd3_ksminv/: TrPh.C  TrPh.h  kskpi.ipynb
notebooks/KsKpi_ks/: TrPh.C  kskpi.ipynb
notebooks/KsKpi_ks_4pi/: TrPh.C  TrPh.h  kskpi_4pi.ipynb
notebooks/KsKpi_ks_vertex_fit/: TrPh.C  kskpi.ipynb
notebooks/KsKpi_sim_hypo/: TrPh.C  TrPh.h  kskpi.ipynb
notebooks/KsKpi_sim_hypo_vertex_fit/: TrPh.C  kskpi.ipynb
notebooks/KsKpi_vertex_fit/: TrPh.C  (+2 more)
notebooks/etapipi_etato2gamma_lost_photons/source/: CMakeLists.txt  env.sh.in
notebooks/etapipi_etato2gamma_lost_photons/source/include/: Hypo2ChPionsLostParticle.hpp  TrPh.hpp
notebooks/etapipi_etato2gamma_lost_photons/source/src/: Hypo2ChPionsLostParticle.cpp  TrPh.cpp
utils/: data_load.py  draw_funcs.py  run_kinfit.py
(+190 files in other folders)
